<resources>
    <string name="app_name">PhotoRecon</string>
    <string name="image_view">Image View</string>
    <string name="detect">Detect</string>
    <string name="run_model">Running the model...</string>
    <string name="restart">Restart</string>
    <string name="select">Select</string>
    <string name="live">Live</string>
    <string name="model">Model</string>
    <!--  Top page-->
    <string name="activeCamera">写真を撮る</string>
    <string name= "reference">ライセンス</string>
    <string name="activeAlbum">アルバムを見る</string>
    <string name="registerPhoto">写真を登録する</string>
    <string name="backup">バックアップ</string>
    <string name="selectPhoto">写真を選択する</string>
    <string name="selectModel">モデルを選択する</string>
</resources>