<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.app.nao.photorecon.MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="60dp"
        android:background="#FFFFFF"
        android:contentDescription="@string/image_view"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.app.nao.photorecon.ResultView
        android:id="@+id/resultView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="60dp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />


    <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:columnCount="2"
        android:rowCount="8"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:padding="16dp"
        android:layout_gravity="center">
    <com.google.android.material.button.MaterialButton
        android:id="@+id/selectModelButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="0"
        android:layout_columnSpan="2"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:text="@string/selectModel"
        android:textAllCaps="false" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/selectPhotoButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="1"
        android:layout_rowSpan="2"
        android:layout_gravity="fill_horizontal"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:text="@string/selectPhoto"
        android:textAllCaps="false" />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/registerPhotoButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="1"
        android:layout_rowSpan="2"
        android:layout_gravity="fill_horizontal"
        android:layout_columnSpan="1"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:text="@string/registerPhoto"
        android:textAllCaps="false" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/activeAlbumButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="4"
            android:layout_columnSpan="2"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:text="@string/activeAlbum"
            android:textAllCaps="false" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/backupButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="5"
        android:layout_columnSpan="1"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:layout_rowSpan="1"
        android:text="@string/backup"
        android:textAllCaps="false"/>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/activeCameraButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="5"
        android:layout_columnSpan="1"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:text="@string/reference"
        android:textAllCaps="false"/>

    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
